package src.main.java.Ejercicio1;

public interface Elemento {
    double getPrecio();
    int getCodigo();
}
